// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableLabel should render correctly 1`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #B9B9BD;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 8.47l-1.41 1.42L12 4.94 7.05 9.89 5.64 8.47 12 2.11l6.36 6.36zM5.64 15.53l1.41-1.42L12 19.06l4.95-4.95 1.41 1.42L12 21.89l-6.36-6.36z"
      />
    </svg>
  </span>
</span>
`;

exports[`SortableLabel should render correctly 2`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #0A67D1;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M5.64 9.53l1.41-1.42L12 13.06l4.95-4.95 1.41 1.42L12 15.89 5.64 9.53z"
      />
    </svg>
  </span>
</span>
`;

exports[`SortableLabel should render correctly 3`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #0A67D1;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 14.47l-1.41 1.42L12 10.94l-4.95 4.95-1.41-1.42L12 8.11l6.36 6.36z"
      />
    </svg>
  </span>
</span>
`;
